--- a/sections/custom-section-product.liquid
+++ b/sections/custom-section-product.liquid
@@ -1,4 +1,3 @@
-
 <section class="sec sec03" data-aos="fade-up"
   data-aos-duration="2000">
     <div class="toppage_text">{{ section.settings.toppage_text }}</div>
@@ -9,6 +8,7 @@
         <!-- <div class="reveal">〜 < class="hidden">まで、画像をホバーしたら商品変更になる -->
         <div class="reveal">
           <img
+            class="reveal_img"
             src="{{ product.featured_image.src | img_url: '3000x' }}"
             alt="{{ product.featured_image.alt | escape }}"
           >
@@ -43,7 +43,9 @@
                 </div>
             </div>
             <!--  {{ product.variants.first.id }}は、一つ一つの商品のIDを呼び出したいから、first.idを記述 -->
-            <input type="hidden" name="id" value= {{ product.variants.first.id }}>
+            <div>
+              <input type="hidden" name="id" value= "{{ product.variants.first.id }}">
+            </div>
             <!--  product.selected_or_first_available_variantで、 -->
             {% assign current_variant = product.selected_or_first_available_variant %}
             <!-- variant.inventory_quantityは、バリアントの在庫数を返す -->
@@ -60,37 +62,6 @@
             {% endif %}
             </div>
          </form>
-
-      {% comment %} <img src="img/new/product-3.webp" alt="" class="img">
-      <div class="product__detail">
-        <div class="product__detail__main">
-          <h2><span>生ガトーショコラ</span></h2>
-          <p class="price">¥2,700</p>
-        </div>
-        <div class="product__detail__text">
-          <p>チョコレートをたっぷり使用し、小麦粉不使用でチョコレート・バター・卵のみでリッチに仕上げました。カカオニブとレアに焼き上げたガトーショコラの食感が絶妙。外はさっくり、中はとろりレアに。</p>
-          <p>
-            当店のロングセラーの逸品。<br>
-            お手土産や贈り物にも喜ばれます。
-          </p>
-          <a href="#">美味しい秘密はこちらから！</a>
-          <p>
-            ※以下の期間熨斗の対応をお断りさせていただいております。何卒ご了承頂きますようお願い申し上げます。<br>中止期間：2022年1月10日〜3月14日ご注文分
-          </p>
-          <p>
-            ※ 住所不備、物流の状況、道路状況、天候、その他の事由によりご希望の到着日に沿いかねる場合がございます。余裕をもったご到着日のご指定をお勧めしております。
-          </p>
-        </div>
-        <div class="counter">
-          <span><i class="fas fa-minus"></i></span>
-          <span>1</span>
-          <span><i class="fas fa-plus"></i></span>
-        </div>
-        <button href="#" class="Btn02 bgleft02">
-          <span>カートに追加する</span>
-        </button>
-        <a href="/product.html" class="link__detail">詳細を見る</a>
-      </div> {% endcomment %}
     </div>
   </section>
 
@@ -109,6 +80,10 @@
             font-size: 20px;
             margin: 0 auto 0;
             padding: 20px;
+        }
+
+        .reveal_img {
+         width: 100%;
         }
     }
 
