--- a/sections/custom-collection-list.liquid
+++ b/sections/custom-collection-list.liquid
@@ -8,7 +8,7 @@
                 <div class="item__content">
                     <h3 class="item__content-text" > {{ block.settings.toppage_text }} </h3>
                     <div class="Btn-top bgleft bgleft03 collection-btn "  style=" border:2px solid #fff; ">
-                        <span style=" font-weight: bold; color: white; " >もっと見る</span>
+                        <span  class="collection__btn" style=" font-weight:bold; color:white; " >もっと見る</span>
                     </div>
                 </div>
             </a>
@@ -95,7 +95,7 @@
         -webkit-transition: ease .2s;
         transition: ease .2s;
       }
-      
+
       .Btn-top span {
         position: relative;
         z-index: 3;
@@ -104,19 +104,19 @@
         -webkit-transition: ease .4s;
         transition: ease .4s;
       }
-      
+
       .Btn-top:hover span {
         color: #000;
       }
 
-    {% comment %} .collection-text-{{ count }}{
-        {% if block.settings.bold-text %}
-            font-weight : bold;
-        {% endif %}
-        font-size: {{ block.settings.font-size }}px;
-        padding: {{ block.settings.height }}px 0;
-        color: {{ block.settings.font-color }};
-    } {% endcomment %}
+      @media screen and (max-width: 480px) {
+          .collection__btn{
+            font-size: 15px;
+        }
+        .item__content-text{
+        font-size: 
+        }
+      }
 
   </style>
 
