--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -59,5 +59,11 @@
     font-size: 25px;
     border: #E0E0E0 2px solid;
   }
+
+  @media (max-width: 500px) {
+    .paginte_nav span{
+      font-size: 15px;
+    }
+  }
 </style>
 
