--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,17 +1,28 @@
+{% section 'custom-announcement-bar' %}
 
+{% section 'custom-header' %}
+<!-- ヘッダーの読み込み -->
 
-{% section 'custom-slideshow' %} <!-- スライドショーの読み込み -->
+{% section 'custom-slideshow' %}
+<!-- スライドショーの読み込み -->
 
-{% section 'custom-collection' %} <!-- 商品一覧の読み込み -->
+{% section 'custom-collection' %}
+<!-- 商品一覧の読み込み -->
 
-{% section 'custom-section-product' %} <!-- 商品単体の読み込み -->
+{% section 'custom-section-product' %}
+<!-- 商品単体の読み込み -->
 
-{% section 'custom-collection-list' %} <!-- セクション一覧の読み込み -->
+{% section 'custom-collection-list' %}
+<!-- セクション一覧の読み込み -->
 
-{% section 'custom-section-about' %} <!-- セクションアバウトの読み込み -->
+{% section 'custom-section-about' %}
+<!-- セクションアバウトの読み込み -->
 
-{% section 'custom-section-content' %} <!-- セクションコンテントの読み込み -->
+{% section 'custom-section-content' %}
+<!-- セクションコンテントの読み込み -->
 
-{% section 'custom-section-category' %} <!-- セクションカテゴリーの読み込み -->
+{% section 'custom-section-category' %}
+<!-- セクションカテゴリーの読み込み -->
 
-
+{% section 'custom-popup' %}
+<!-- ポップアップの読み込み -->
