--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -330,6 +330,10 @@
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     {{ 'script.js' | asset_url | script_tag }}
 
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
+
 
 
   </body>
