レスポンシブ修正

--- a/sections/custom-header.liquid
+++ b/sections/custom-header.liquid
@@ -164,6 +164,12 @@
   .header .logo{
   width: {{ section.settings.image_width }}px;
   }
+
+  @media (max-width: 450px) {
+    .header .logo {
+      width: 90px;
+    }
+  }
 </style>
 
 {% schema %}
