--- a/sections/custom-popup.liquid
+++ b/sections/custom-popup.liquid
@@ -11,7 +11,7 @@
         <div class="pop__conent-rapper">
           <h2>Get Our Email Letter</h2>
           <div class="pop_desc">
-            Subscribe to the Arito Store mailing list to receive updates on special offers and other discount
+            Subscribe to the Urban Birds mailing list to receive updates on special offers and other discount
             information.
           </div>
           <form action="" method="post" name="sucscribe-form" target="_blank">
