--- a/sections/custom-header.liquid
+++ b/sections/custom-header.liquid
@@ -162,7 +162,7 @@
   }
 
   .header .logo{
-  width: {{ section.settings.image_width }}px;
+  width: 100px;
   }
 
   @media (max-width: 450px) {
@@ -184,11 +184,11 @@
     {
       "type": "range",
       "id": "image_width",
-      "default": 120,
+      "default": 100,
       "label": "画像の大きさ",
-      "min": 120,
-      "max": 200,
-      "step": 20,
+      "min": 100,
+      "max": 160,
+      "step": 10,
       "unit": "px"
     },
     {
